welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:18: error: illegal start of simple expression
  if ()n>0
      ^arrayFront9:21: error: ')' expected but '}' found.
} 
^